[package]
name = "pqcrypto-compat"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["cryptography", "crypto", "signature", "kem"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc-comment = "0.3"
pqcrypto = "0.14"
pqcrypto-traits = "0.3"
signature = "1.3"
