[package]
name = "pqcrypto-compat"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["cryptography", "crypto", "signature", "kem"]
categories = ["cryptography", "no-std"]
description = "A convenience crate which implements RustCrypto traits for pqcrypto primitives"

[dependencies]
doc-comment = "0.3"
pqcrypto = "0.14"
pqcrypto-traits = "0.3"
signature = "1.4"
