[package]
name = "pqcrypto-compat"
version = "0.1.0"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["cryptography", "crypto", "signature", "kem"]
categories = ["cryptography", "no-std"]
description = "A convenience crate which implements RustCrypto traits for pqcrypto primitives"

[dependencies]
doc-comment = "0.3"
pqcrypto = { version = "0.15", default-features = false }
pqcrypto-traits = "0.3"
signature = "1.4"
rand_core = "0.6"

[dependencies.kem]
git = "https://github.com/rozbb/traits.git"
branch = "kem-v2"

[dev-dependencies]
rand_core = { version = "0.6", features = [ "getrandom" ] }

[features]
default = [
    "pqcrypto-kyber", "pqcrypto-frodo", "pqcrypto-ntru", "pqcrypto-ntruprime", "pqcrypto-saber",
    "pqcrypto-classicmceliece", "pqcrypto-hqc", "pqcrypto-dilithium", "pqcrypto-falcon",
    "pqcrypto-rainbow", "pqcrypto-sphincsplus"
]
pqcrypto-kyber = ["pqcrypto/pqcrypto-kyber"]
pqcrypto-frodo = ["pqcrypto/pqcrypto-frodo"]
pqcrypto-ntru = ["pqcrypto/pqcrypto-ntru"]
pqcrypto-ntruprime = ["pqcrypto/pqcrypto-ntruprime"]
pqcrypto-saber = ["pqcrypto/pqcrypto-saber"]
pqcrypto-classicmceliece = ["pqcrypto/pqcrypto-classicmceliece"]
pqcrypto-hqc = ["pqcrypto/pqcrypto-hqc"]
pqcrypto-dilithium = ["pqcrypto/pqcrypto-dilithium"]
pqcrypto-falcon = ["pqcrypto/pqcrypto-falcon"]
pqcrypto-rainbow = ["pqcrypto/pqcrypto-rainbow"]
pqcrypto-sphincsplus = ["pqcrypto/pqcrypto-sphincsplus"]
serde_impls = ["pqcrypto/serialization"]
